--- a/Style/security.css
+++ b/Style/security.css
@@ -368,7 +368,6 @@ font-weight: 500;
 #call{
   width: 200px;
   margin: auto;
-
   border: 3px solid #9a76d0;
   background-color: transparent;
   box-shadow: none;
@@ -384,6 +383,7 @@ font-weight: 500;
   align-items: center;
   font-size: 11px;
   font-weight: 700;
+  text-decoration: none;
 }
 #call:hover{
     transition:0.5s;
@@ -395,7 +395,7 @@ font-weight: 500;
   width: 200px;
   margin: auto;
   border: 3px solid #9a76d0;
-
+  text-decoration: none;
   background-color:  #9a76d0;
   box-shadow: none;
   color: white;
