--- a/Style/insight.css
+++ b/Style/insight.css
@@ -174,11 +174,12 @@
 
 .message-box {
   position: fixed;
+  
 }
 .post-container {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: repeat(2, 1fr);
+
 }
 .post-cards {
   width: auto;
@@ -316,6 +317,9 @@ select {
   right: 2rem;
   width: 4rem;
   height: 4rem;
+  position: absolute;
+
+  z-index: 1030;
 }
 .chatbox-toggle {
   width: 100%;
@@ -544,6 +548,35 @@ select {
   #header-design{
     display: none;
   }
+  .mid-header > div {
+    position: inherit;
+    width:100%;
+  }
+
+  .mid-header {
+    height: auto;
+  }
+
+  .sub-mid-header > div {
+    width: 80%;
+    margin: auto;
+
+  }
+
+  sub-mid-header > div > div {
+    padding: 10px;
+  }
+  #middle-bar {
+    width: 100%;
+    margin: auto;
+    color: #6f8093;
+    font-size: 10px;
+    text-align: center;
+    padding: 23px 23px;
+    display: flex;
+    justify-content: space-evenly;
+  
+  }
 
 }
 @media all and (min-width: 320px) and (max-width: 767px) {
@@ -625,5 +658,27 @@ select {
   #bottom-update{
     display: block;
 
+  }
+  #middle-bar {
+    width: 100%;
+    margin: auto;
+    color: #6f8093;
+    font-size: 10px;
+    text-align: center;
+    padding: 23px 23px;
+    display: flex;
+    justify-content: space-evenly;
+    gap: 5px;
+  
+  }
+  .chatbox-wrapper {
+    position: fixed;
+    bottom: 2rem;
+    right: 2rem;
+    width: 4rem;
+    height: 4rem;
+    position: absolute;
+  
+    z-index: 1030;
   }
 }
